# Stellara_Contracts

./: ADVANCED_FEATURES_PR.md  CDP_PR_DESCRIPTION.md  CROSS_CHAIN_ROUTER.md  DID_IMPLEMENTATION_GUIDE.md  DID_INTEGRATION_ARCHITECTURE.md  DID_TESTING_STRATEGY.md  PR_COMPREHENSIVE_BACKEND_FEATURES.md  README.md  REGULATORY_PR_DESCRIPTION.md  package-lock.json
Contracts/: CIRCUIT_BREAKER_RECOVERY.md  CONTRACTS.md  Cargo.toml  INTEGRATION_TEST_PATTERNS.md  README.md  README_TREASURY.md  all_test_results.txt  hardhat.config.js  metadata.json  package.json
Contracts/circuits/: accredited_investor.circom  age_over_18.circom
Contracts/contracts/: MultisigTreasury.sol  RevocationRegistry.sol  SoulboundCredential.sol
Contracts/contracts/academy/: Cargo.toml
Contracts/contracts/academy-rewards/: Cargo.toml
Contracts/contracts/academy-rewards/src/: lib.rs
Contracts/contracts/academy/src/: gas_bench.rs  lib.rs  regression.rs  test.rs  vesting.rs
Contracts/contracts/academy/test_snapshots/gas_bench/: test_batch_claim_gas_efficiency.1.json  test_batch_claim_gas_efficiency.2.json
Contracts/contracts/academy/test_snapshots/regression/: test_batch_claim_failure_does_not_mark_any_schedule_claimed.1.json
Contracts/contracts/academy/test_snapshots/test/: test_batch_claim_claims_multiple_rewards_atomically.1.json  test_batch_claim_is_all_or_nothing.1.json  test_batch_claim_rejects_oversized_batch.1.json  test_claim_not_vested.1.json  test_claim_single_semantics_prevents_double_claim.1.json  test_claim_wrong_beneficiary.1.json  test_contract_cannot_be_initialized_twice.1.json  test_contract_initialization.1.json  test_grant_vesting_schedule.1.json  test_max_batch_claims_constant.1.json  test_non_admin_cannot_grant.1.json  test_revoke_blocks_future_claims.1.json  test_vesting_calculation_partial_and_full.1.json
Contracts/contracts/cross-chain-router/: Cargo.toml
Contracts/contracts/cross-chain-router/src/: bridge.rs  lib.rs
Contracts/contracts/cross-chain-router/test_snapshots/tests/: test_bridge_deposit.1.json  test_initiate_message.1.json
Contracts/contracts/did-registry/: Cargo.toml
Contracts/contracts/did-registry/src/: lib.rs  test.rs
Contracts/contracts/identity-hub/: Cargo.toml
Contracts/contracts/identity-hub/src/: lib.rs
Contracts/contracts/liquidity-mining/: Cargo.toml  README.md
Contracts/contracts/liquidity-mining/src/: lib.rs  test.rs
Contracts/contracts/messaging/: Cargo.toml
Contracts/contracts/messaging/src/: lib.rs  test.rs
Contracts/contracts/messaging/test_snapshots/test/: test_contract_cannot_be_initialized_twice.1.json  test_contract_initialization.1.json  test_duplicate_upgrade_approval_prevention.1.json  test_get_messages_filtering.1.json  test_get_unread_count_tracks_multiple_messages.1.json  test_mark_as_read_rejects_invalid_access.1.json  (+6 more)
Contracts/contracts/parametric_insurance/src/: errors.rs  lib.rs  storage.rs  types.rs
Contracts/contracts/parametric_insurance/tests/: integration.rs
Contracts/contracts/social_rewards/: Cargo.toml
Contracts/contracts/social_rewards/src/: lib.rs
Contracts/contracts/stablecoin_reserve/: ARCHITECTURE.md  Cargo.toml  INTEGRATION_GUIDE.md  README.md  SECURITY_AUDIT.md  deploy.sh
Contracts/contracts/stablecoin_reserve/src/: custodian_integration.rs  lib.rs  proof_of_reserves.rs  rebalancing.rs  redemption.rs  regulatory_reporting.rs  reserve_tracking.rs  test.rs
Contracts/contracts/staking-rewards/: Cargo.toml
Contracts/contracts/staking-rewards/src/: lib.rs  test.rs
Contracts/contracts/synthetic-assets/: Cargo.toml
Contracts/contracts/synthetic-assets/src/: lib.rs
Contracts/contracts/tcr/: Cargo.toml
Contracts/contracts/tcr/src/: lib.rs
Contracts/contracts/trading/: Cargo.toml
Contracts/contracts/trading/src/: bench.rs  lib.rs  test.rs
Contracts/contracts/verifiable-credentials/: Cargo.toml
Contracts/contracts/verifiable-credentials/src/: lib.rs
Contracts/integration-tests/: Cargo.toml
Contracts/integration-tests/test_snapshots/: test_academy_rewards_trigger_social_rewards.1.json  test_messaging_notifications_from_other_contract_flows.1.json  test_shared_governance_module_across_contracts.1.json  test_trading_interacts_with_fee_distribution.1.json
Contracts/integration-tests/tests/: cross_contract.rs
Contracts/shared/src/: circuit_breaker.rs  events.rs  lib.rs
Contracts/test/: MultisigTreasury.test.js
(+422 files in other folders)
