[workspace]
members = [
    "contracts/trading",
    "contracts/social_rewards",
    "contracts/messaging",
    "contracts/academy",
    "contracts/academy-rewards",
    "contracts/did-registry",
    "contracts/verifiable-credentials",
    "contracts/identity-hub",
    "integration-tests",
    "shared",
]
resolver = "2"

[profile.release]
opt-level = "z"
overflow-checks = true
lto = true
codegen-units = 1
strip = true

[workspace.dependencies]
# Pin arbitrary to a version compatible with stellar-xdr 20.1.0
# arbitrary >= 1.4.0 removed try_size_hint which stellar-xdr depends on
arbitrary = "=1.3.2"