[workspace]
members = [
    "contracts/trading",
    "contracts/social_rewards",
    "contracts/messaging",
    "contracts/academy",
    "contracts/academy-rewards",
    "contracts/synthetic-assets",

    "contracts/tcr",
    "contracts/cross-chain-router",
    "integration-tests",
    "shared",
]
resolver = "2"