[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["rlib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]

[dev-dependencies]
soroban-sdk = { version = "20.5.0", features = ["testutils"] }
academy-vesting = { path = "../contracts/academy", features = ["testutils"] }
academy-rewards = { path = "../contracts/academy-rewards", features = ["testutils"] }
social_rewards = { path = "../contracts/social_rewards", features = ["testutils"] }
trading = { path = "../contracts/trading", features = ["testutils"] }
messaging = { path = "../contracts/messaging", features = ["testutils"] }
shared = { path = "../shared" }
