[package]
name = "social_rewards"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = "20.5.0"
shared = { path = "../../shared" }

[dev-dependencies]
soroban-sdk = { version = "20.5.0", features = ["testutils"] }
