[package]
name = "stellara-staking-rewards"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { version = "=20.5.0", default-features = false }

[dev-dependencies]
soroban-sdk = { version = "=20.5.0", features = ["testutils"], default-features = false }
